--- a/README
+++ b/README
@@ -30,16 +30,16 @@ Canonical download:
 -------------------------------------------
 
 Build instructions:
-  unpack glfw-2.6.beta1-X-src.tar.bz2
+  unpack glfw-2.6-X-src.tar.bz2
     if you use setup to install this src package, it will be
 	 unpacked under /usr/src automatically
   cd /usr/src
-  cygport ./glfw-2.6.beta1-X.cygport all
+  cygport ./glfw-2.6-X.cygport all
 
 This will create:
-  /usr/src/glfw-2.6.beta1-X-src.tar.bz2
-  /usr/src/glfw-2.6.beta1-X.tar.bz2
-  /usr/src/glfw-devel-2.6.beta1-X.tar.bz2
+  /usr/src/glfw-2.6-X-src.tar.bz2
+  /usr/src/glfw-2.6-X.tar.bz2
+  /usr/src/glfw-devel-2.6-X.tar.bz2
 
 -------------------------------------------
 
@@ -50,13 +50,16 @@ Files included in the binary package:
   /usr/lib/libglfw.a
   /usr/lib/libglfw.dll.a
   /usr/lib/pkgconfig/libglfw.pc
-  /usr/share/doc/Cygwin/glfw-2.6.beta1.README
-  /usr/share/doc/glfw-2.6.beta1/LICENSE.txt
-  /usr/share/doc/glfw-2.6.beta1/readme.txt
+  /usr/share/doc/Cygwin/glfw-2.6.README
+  /usr/share/doc/glfw-2.6/LICENSE.txt
+  /usr/share/doc/glfw-2.6/readme.txt
 
 ------------------
 
 Port Notes:
+
+----- version 2.6-1 -----
+Version bump.
 
 ----- version 2.6.beta1-1 -----
 Initial release for Cygwin.
